# fftplay

MFFM_FFTw_Wrapper/: Array.h  Changelog  Doxyfile  Makefile  README  complex2DFFT.H  complex2DFFT.cc  complexFFT.H  complexFFT.cc  complexFFTExample.cc  configure.in  real2DFFT.H  real2DFFT.cc  real2DFFTExample.cc  realFFT.H  realFFT.cc  realFFTData.H  realFFTData.cc  realFFTExample.cc
MFFM_FFTw_Wrapper/html/: Thumbs.db  annotated.html  classcomplexFFT-members.html  classcomplexFFT.html  classcomplexFFTData-members.html  classcomplexFFTData.html  classreal2DFFT-members.html  classreal2DFFT.html  classreal2DFFTData-members.html  classreal2DFFTData.html  classrealFFT-members.html  classrealFFT.html  classrealFFTData-members.html  classrealFFTData.html  complexFFTExample_8cc-example.html  complexFFT_8H-source.html  examples.html  files.html  functions.html  index.html  namespaces.html  namespacestd.html  real2DFFTExample_8cc-example.html  real2DFFT_8H-source.html  realFFTData_8H-source.html  realFFTExample_8cc-example.html  realFFT_8H-source.html
MFFM_FFTw_Wrapper/orig/: complexFFT.cc  real2DFFT.H  real2DFFT.cc  realFFT.H  realFFT.cc  realFFTData.cc
fftw++-1.01/: README  example0.cc  example0r.cc  example1.cc  example1r.cc  example2.cc  example2r.cc  example3.cc  example3r.cc  fftw++.cc  fftw++.h
fftw-3.1/: ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  ltmain.sh
fftw-3.1/api/: api.h  (+62 more)
intel-ipps/: Makefile.am  Makefile.in  doit.c
intel-mkl/: Makefile.am  Makefile.in  doit.c  doit_dfti.c  doitf.c
(+784 files in other folders)
